--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <video playsinline muted autoplay src="vbf_拳で.mp4"></video>
+
+<video src="/videos/dango.webm" width="480" height="360" controls></video>
