--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
   <img src="top.png">
   <img src="top.png">
   <img src="top.png">
+
+  <video controls src="vbf_拳で.mp4"></video>
+  <video controls src="dango.webm"></video>
   
   <footer>
     <div class="container">
